Revision history for ocsreports
2.1
		* fix bug on accountinfo (with uploadfile>64ko)
		* add advanced options for teledeploy
		* change ocs logo
		* add wake on lan on computer
		* add wake on lan on multi search
		* Remove Support 
		* add SNMP field to scan multi networks
		* Add QRcode on accountinfo
		* Add architecture field
		* fix bug on softwares detail on computer
		* sort categories on dictionary
2.0.6
		* fix security vulnerability => Cross site request forgery
		* fix utf8 problem
		* add link on dico ignore
		* fix bug on menu (http://forums.ocsinventory-ng.org/viewtopic.php?pid=49125)
		* fix bug on export data on all_soft
		* add oscomment field on tab

2.0.5
		* Add logs directory on sql files
		* fix Warning on function_config_generale.php for PHP 5.4. 
		* fix security bug https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/963229
		* fix security bug https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/963017
		* fix bug on package's group - Tx to FactorFx.
		* fix cas library - use system library
		* fix warning on natcasesort function. tx to Remi for this patch
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/940370 (redistribution group)

2.0.4 
		* fix a part of this bug https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/907755 (show computers name on csv export)
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/918085
		* fix bug on menu by profil
		* on deployment statistics, merge EXIT_CODE_% with ERROR.
		* add LDAP group merbership lookups.(http://forums.ocsinventory-ng.org/viewtopic.php?pid=45215)
		* fix http://forums.ocsinventory-ng.org/viewtopic.php?pid=45331#p45331
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/893463
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/902510
		* You can add snmp communities with the same name with different version
		* fix https://bugs.launchpad.net/ocsinventory-ocsreports/+bug/878166
		* sort all select list