@@ -11,7 +11,7 @@
 
 @session_start();
 define("GUI_VER", "7001");												// Version of the database
-define("GUI_VER_SHOW","2.1");        									// Version of the GUI
+define("GUI_VER_SHOW","2.1RC1");        								// Version of the GUI
 define("MAC_FILE", "files/oui.txt");									// File containing MAC database
 define("DEFAULT_LANGUAGE","english");    								// Default language
 define("PAG_INDEX","function");         								// define name in url (like multi=32)
