@@ -1,5 +1,7 @@
 Revision history for ocsreports
 2.1
+		* change info on processor on coputer details
+		* add pda info on computer details
 		* fix bug on accountinfo (with uploadfile>64ko)
 		* add advanced options for teledeploy
 		* change ocs logo
